# sphinx-playground

./: .gitignore  .pre-commit-config.yaml  README.md  conf.py  index.rst  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.rst
src/sphinx_playground/: __init__.py
