[project]
name = "sphinx-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
docs = [
    "sphinx",
]

dev = [
    "sphinx-playground[docs]",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
